--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
 }
 .header__menu {
     display: flex;
-    justify-content:flex-start;
+    justify-content:auto;
     gap: 80px;
 }
 .header__menu__link {
@@ -51,8 +51,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 5% 15%;
-    gap: 8rem;
+    padding: 5% 15% 14%;
+    gap: 2rem;
 }
 @media (max-width: 480px) {
     .presentacion {
@@ -71,7 +71,7 @@ body {
     gap: 4rem
 }
 .presentacion__contenido__titulo{
-    font-size: 3.5rem;
+    font-size: 3rem;
     font-family: var(--fuenteKronaOne);
 }
 .titulo-destaque {
@@ -104,6 +104,11 @@ body {
     width: 350px;
     border-radius: 10px;
     border: solid 8px var(--celeste);
+}
+@media (max-width: 480px) {
+    .presentacion__imagen {
+        width: 250px;
+    }
 }
 .presentacion__imagen:hover {
     border: solid 8px var(--azulClaro);
